--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/dqb6fse.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="icon" href="img/n@2x.png">
+    <link rel="icon" href="img/icon.svg">
 </head>
 <body>
     <div id="loader">
@@ -38,17 +38,17 @@
         <div class="dot"></div>
         <p>Every piece is one of a kind</p>
     </div>
-    <section class="section section1">
+    <section class="section about">
         <h1>About Me</h1>
         <div class="row">
-            <img src="img/home/2.jpg">
+            <img src="img/Nora.jpg">
             <div class="column">
                 <p class="sans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi molestias modi corrupti atque odit, at eius assumenda sit aliquam quos. Ad, similique. Reiciendis nobis a rerum odio natus corrupti animi sed sint asperiores unde nostrum cum, voluptates consequatur. Ullam sed delectus nisi laudantium praesentium eaque dolores vero quis voluptate. Repudiandae maxime hic eveniet omnis modi voluptas delectus consectetur, rerum atque perspiciatis ipsam accusamus officia amet, earum fuga?</p>
                 <a href="#" class="button">Read More</a>
             </div>
         </div>
     </section>
-    <section class="section section2">
+    <section class="section gallery">
         <h1>Gallery</h1>
         <ul>
             <li>
@@ -103,11 +103,11 @@
             </script>
         </ul>
     </section>
-    <section class="section section3">
+    <section class="section instagram">
         <h1>Check out my
             <a href="https://www.instagram.com/clothing_by_nora/" target="_blank" class="button">Go to Instagram</a>
         </h1>
-        <h1>↪ Instagram.</h1>
+        <h1><img src="img/Right Arrow.svg" alt=""> Instagram.</h1>
         <div id="circle"></div>
     </section>
     <footer>
