--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </div>
     <div id="header">
         <div id="bar"></div>
-        <a href="#" class="logo" id="logo">clothing by nora</a>
+        <a href="/" class="logo" id="logo">clothing by nora</a>
         <input type="checkbox" id="checkbox" class="checkbox">
         <label for="checkbox" class="menu" id="menu"><div class="top"></div><div class="mid"></div><div class="bot"></div></label>
         <div class="links" id="links">
-            <a href="#">Home</a>
-            <a href="#">Gallery</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="/">Home</a>
+            <a href="#gallery" onclick="clickLink()">Gallery</a>
+            <a href="/">About</a>
+            <a href="/">Contact</a>
         </div>
     </div>
     <section class="hero">
@@ -44,10 +44,11 @@
             <img src="img/Nora.jpg">
             <div class="column">
                 <p class="sans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi molestias modi corrupti atque odit, at eius assumenda sit aliquam quos. Ad, similique. Reiciendis nobis a rerum odio natus corrupti animi sed sint asperiores unde nostrum cum, voluptates consequatur. Ullam sed delectus nisi laudantium praesentium eaque dolores vero quis voluptate. Repudiandae maxime hic eveniet omnis modi voluptas delectus consectetur, rerum atque perspiciatis ipsam accusamus officia amet, earum fuga?</p>
-                <a href="#" class="button">Read More</a>
+                <a href="/" class="button">Read More</a>
             </div>
         </div>
     </section>
+    <div id="gallery" class="anchor"></div>
     <section class="section gallery">
         <h1>Gallery</h1>
         <ul>
